--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "process": "^0.11.10",
     "sequelize": "^6.32.1",
     "sharp": "^0.32.4",
+    "stripe": "^14.5.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
