--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -25,7 +26,7 @@
     "path": "^0.12.7",
     "process": "^0.11.10",
     "sequelize": "^6.32.1",
-    "sharp": "^0.32.4",
+    "sharp": "^0.32.6",
     "stripe": "^14.5.0",
     "uuid": "^9.0.0"
   },
